# ot-lan-rest-server

./: .gitignore  Caddyfile  README.md  rpc-server.py
app/: __init__.py  main.py  models.py  rpc-server.py
backend/: test.db
backend/app/: crud.py  database.py  init_db.py  main.py  models.py  nano run-server.sh  schemas.py
frontend/: Cargo.toml  wasm-pack-build.sh
frontend/src/: lib.rs
rpc_server_py/: client.py  pingpong.proto  pingpong_pb2.py  pingpong_pb2_grpc.py  server.py
rust_client/: Cargo.toml  build.rs
rust_client/src/: main.rs
scripts/: bacnet_capture.pcap  capture_bacnet.sh  generate_certs.sh  tail_scale_example.py
static/: index.html
static/pkg/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts  package.json
tests/: test_models.py
